2000-09-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c (gnc_xfer_dialog_close_cb):
	disconnect amount edit entry signals to avoid gtk warnings.

	* src/engine/Transaction.h: make xaccInitTransaction a private
	function.

	* src/scm/qif-import/qif-to-gnc.scm: Don't init a new transaction.
	gnc:transaction-create does this automatically. Doing it again leaks
	memory.

2000-09-11  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: incorporate amount editing widget
	into the transfer dialog.

	* src/gnome/gnc-amount-edit.c: new widget to allow amount editing
	with expression parsing.

2000-09-05  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/date-utilities.scm ((gnc:reldate-initialize)): New function - initialise
	explicitly at startup rather than in ad-hoc manner

2000-08-31  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-and-pnl.scm: Bug fixes for new date options.

	* src/scm/report/transaction-report.scm: Bug fixes for new date options.

	* src/scm/report/budget-report.scm: Bug fixes for new date options.

2000-08-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/hello-world.scm: A couple of new functions to test the relative
	and combination date style options.

	* src/scm/report/*.scm: Modified date options to take the new function.  Most
	are still using absolute options at this stage, will get modified to use relative
	dates later.

	* src/scm/options.scm (gnc:make-option): new argument (option-data-fns) 
	for manipulating multi-choice style options.  Changes
	to option-makers to either support this.  
	(gnc:make-date-option): modified to support relative and combination dates.

	* src/scm/date-utilities.scm: Extensive additions for manipulating 
	relative dates.

	* src/guile/option-util.c: Support for new relative-date and
	combination options , and use of scheme getters
	rather than direct data structure manipulation.
	(gnc_oiption_db_lookup_date_option): modified to